5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1593_2425.log
== TEST (2019-03-25 15:23:27) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(cons + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(cons + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:11) 
-- CODE:
dis = int(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(cons + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:56) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

comb = float(input("Digite o combustível: "))

cons = dis / comb

print(cons + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(cons + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:26:20) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(round(cons + "km/l", 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(cons + "km/l", 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:27:06) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(round(cons + km/l, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(cons + km/l, 3))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:27:35) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(round(cons, km/l, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(cons, km/l, 3))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:29:32) 
-- CODE:
dis = int(input("Digite a distancia percorrida: "))

comb = float(input("Digite a quantidade de combustível: "))

cons = dis / comb

print(round(cons, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dis = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:07) 
-- CODE:
var1 = float(input("Digite a distancia percorrida: "))

var2 = float(input("Digite o combustível gasto: "))

cons = var1 / var2

print(round(cons, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(cons, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:06) 
-- CODE:
var1 = float(input("Digite a distancia percorrida: "))

var2 = float(input("Digite o combustível gasto: "))

consumo = var1 / var2

print(round(consumo, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:27) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

com = float(input("Digite o combustível gasto: "))

consumo = var1 / var2

print(round(consumo, 3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    consumo = var1 / var2
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:48) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

com = float(input("Digite o combustivel gasto: "))

consumo = var1 / var2

print(round(consumo, 3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    consumo = var1 / var2
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:29) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

com = float(input("Digite o combustivel gasto: "))

consumo = dis / com

print(round(consumo, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:12:57) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

com = float(input("Digite o combustivel gasto: "))

consumo = dis / com

print(round(consumo, 3),"km/l")
-- EXECUTION TIME:
0.132642
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:14:38) 
-- CODE:
dis = float(input("Digite a distancia percorrida: "))

com = float(input("Digite o combustivel gasto: "))

consumo = dis / com

print(round(consumo, 3),"km/l")
-- EXECUTION TIME:
0.13468
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
